Fix miss-aligned question panel and key

--- a/assets/styles/gq-cbt.css
+++ b/assets/styles/gq-cbt.css
@@ -35,12 +35,14 @@
     margin: auto;
     width: 20px;
     height: 20px;
+    cursor: default;
 }
 
 .key-text {
     font-size: 12px;
     text-align: center;
     margin-bottom: 5px;
+    cursor: default;
 }
 
 .question-image img {
